# NLP-Beginner-tasks

./: .gitignore  README.md  TASKS_ANALYSIS_REPORT.md  pyproject.toml
task1/outputs/: experiment_summary.csv  result_ng1_ce_lr0.05.json  result_ng1_ce_lr0.1.json  result_ng1_mse_lr0.1.json  result_ng2_ce_lr0.1.json
task1/textcls/: __init__.py  data.py  experiments.py  features.py  model.py  train.py
task2/outputs/: cnn_ce_lr1e3.json  cnn_ce_lr5e4.json  cnn_compare.json  cnn_focal_lr1e3.json  cnn_k23_adamw.json  cnn_k34567_sgd.json  cnn_k345_adam.json  cnn_mse_lr1e3.json  experiment_summary.csv  rnn_compare.json  transformer_compare.json
task2/textdl/: __init__.py  data.py  experiments.py  models.py  train.py
task3/outputs/lm/: experiment_summary.csv  lm_char_ln_sin_v200.json  lm_char_rms_rope_v200.json  lm_word_ln_sin_v200.json  lm_word_ln_sin_v500.json  lm_word_rms_rope_v500.json
task3/outputs/math/: experiment_summary.csv  math_dec_ln_sin_ood.json  math_dec_rms_rope_ood.json  math_s2s_ln_sin_in_dist.json  math_s2s_ln_sin_ood.json  math_s2s_rms_rope_ood.json  math_s2s_rms_sin_ood.json
task3/transformer_basics/: __init__.py  data_lm.py  data_math.py  experiments.py  models.py  train_lm.py  train_math.py
